--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "author": "Lou Soua",
   "license": "ISC",
   "dependencies": {
-    "assert": "^1.3.0",
     "body-parser": "^1.14.1",
     "crypto-js": "^3.1.5",
     "express": "^4.13.3",
-    "jquery": "^2.1.4",
-    "mongodb": "^2.0.52",
+    "foreach": "^2.0.5",
+    "mongoose": "^4.3.2",
     "path": "^0.12.7"
   }
 }
