--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "crypto-js": "^3.1.5",
     "express": "^4.13.3",
     "foreach": "^2.0.5",
+    "glob": "^6.0.1",
+    "jsonfile": "^2.2.3",
     "mongoose": "^4.3.2",
     "path": "^0.12.7"
   }
