--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "nora",
+  "name": "nodejs-starter",
   "version": "1.0.0",
-  "description": "REST API for database management",
-  "main": "server.js",
+  "description": "Starter project for node.js applications.",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "nora",
-    "rest",
-    "database",
-    "mongodb"
-  ],
-  "author": "Lou Soua",
+  "author": "Luis Felipe Sousa",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.14.1",
-    "crypto-js": "^3.1.5",
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "foreach": "^2.0.5",
-    "glob": "^6.0.1",
-    "jsonfile": "^2.2.3",
-    "mongoose": "^4.3.2",
-    "path": "^0.12.7"
+    "mysql": "^2.10.0",
+    "sequelize": "^3.17.1"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.1.1"
   }
 }
